compiler-plugin/src/testData/reference/errors/NotAccessLiteral.kt
package reference.errors

@ExportReferences
object Test : BaseReferenceExporter() {
    init {
        exportReferenced(<!SYMBOL_EXPORT_REFERENCE_NOT_ACCESS_LITERAL!>1<!>)
    }
}
